Repair git index, stage, and sync all project files

--- a/dunes.config
+++ b/dunes.config
@@ -1,4 +1,4 @@
-# Dunes runner configuration
+# ryze runner configuration
 # Set your Render service URL here to enable browser launch
-RENDER_URL=https://dunes.onrender.com
-SERVICE_NAME=dunes
+RENDER_URL=https://ryze.onrender.com
+SERVICE_NAME=ryze
