Update: project documentation, structure, workflows, and archives

--- a/alembic.ini
+++ b/alembic.ini
@@ -1,6 +1,9 @@
+
+
+
 [alembic]
 script_location = alembic
-sqlalchemy.url = %(DATABASE_URL)s
+sqlalchemy.url = sqlite:///instance/dunes_basketball.db
 
 [loggers]
 keys = root,sqlalchemy,alembic
@@ -34,3 +37,5 @@ formatter = generic
 
 [formatter_generic]
 format = %(levelname)-5.5s [%(name)s] %(message)s
+
+
